<resources>
    <string name="app_name">MineSweeper</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TitlesManifest -->
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_game_starter">GameStarterActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_result_game">ResultGameActivity</string>

    <!-- Menu -->
    <string name="menu_op1">Show all Game of this user</string>
    <string name="menu_op2">Delete this game</string>

    <!-- Titles -->
    <string name="TitleMainMenu">Minesweeper</string>
    <string name="TitleHelp">Help</string>
    <string name="TitleGameStarter">Game Starter</string>
    <string name="TitleGame">Game</string>
    <string name="TitleResultGame">Game Result</string>
    <string name="TitleLogGame">Game Information</string>
    <string name="TitleQuery">Query Result</string>
    <string name="TitleRegister">Detail of the Game</string>

    <!-- Buttons -->
    <string name="ReturnMainMenuButton">Return Main Menu</string>
    <string name="QuitButton">Quit</string>
    <string name="StartButton">Start</string>
    <string name="HelpButton">Help</string>
    <string name="ConsultButton">Consult</string>
    <string name="PlayButton">Play !</string>
    <string name="SendEmail">Send e-mail</string>
    <string name="ReturnGameStarter">Return Game Starter</string>
    <string name="ReturnAccesDB">Return Query Result</string>

    <!-- RadioButtons -->
    <string name="FewMinesRadioButton">15 %</string>
    <string name="MediumMinesRadioButton">25 %</string>
    <string name="HighMinesRadioButton">35 %</string>

    <!-- TextView -->
    <string name="UserName"><u>User Name : </u></string>
    <string name="SizeGrill"><u>Size Grill ( between 3 and 11 ) : </u></string>
    <string name="Timer"><u>Timer : </u></string>
    <string name="Date_Hour"><u>Date and Hour : </u></string>
    <string name="Data"><u>Data of the game : </u></string>
    <string name="PercentMines"><u>% Mines : </u></string>
    <string name="Email"><u>Email Adress : </u></string>
    <string name="toSeparate">-- </string>
    <string name="help">The rules in Minesweeper are simple: \n

Uncover a mine, and the game ends. \n

Uncover an empty square, and you keep playing. \n

Uncover a number, and it tells you how many mines lay hidden in the eight surrounding squares—information you use to deduce which nearby squares are safe to click.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_consult_save_game">ConsultSaveGameActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_consult">ConsultActivity</string>
    <string name="title_activity_detail_register">DetailRegisterActivity</string>

</resources>
