<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gabriel.minesweeper.GameStarterActivity"
    android:background="@drawable/backrepeat">


    <TextView android:text="@string/TitleGameStarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GameStarterLinearLayout1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            style="@style/Text"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/GameStarterEditText1"
            style="@style/Text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameStarterLinearLayout1"
        android:layout_marginTop="20dp"
        android:id="@+id/GameStarterLinearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SizeGrill"
            style="@style/Text"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/GameStarterEditText2"
            style="@style/Text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameStarterLinearLayout2"
        android:layout_marginTop="20dp"
        android:id="@+id/GameStarterLinearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Timer"
            style="@style/Text"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCheckBox"
        android:layout_alignTop="@+id/GameStarterLinearLayout3"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameStarterLinearLayout3"
        android:layout_marginTop="40dp"
        android:id="@+id/GameStarterLinearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PercentMines"
            style="@style/Text"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgPercentMines"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right|top"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/GameStarterLinearLayout4"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView">
        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/FewMinesRadioButton"
            style="@style/Text"/>
        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/MediumMinesRadioButton"
            android:checked="true"
            style="@style/Text"/>
        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/HighMinesRadioButton"
            style="@style/Text"/>
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayButton"
        style="@style/Button"
        android:onClick="showGame"
        android:layout_below="@+id/GameStarterLinearLayout4"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
