<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gabriel.minesweeper.ResultGameActivity">

    <TextView
        android:text="@string/TitleResultGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ResultGameTextView1"
        style="@style/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GameStarterLinearLayout1"
        android:layout_below="@+id/ResultGameTextView1"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ResultGameTextView2"
            android:text="@string/Date_Hour"
            style="@style/Text"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:layout_below="@+id/ResultGameTextView2"
            android:layout_marginTop="10dp"
            android:id="@+id/Datetv" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameStarterLinearLayout1"
        android:layout_marginTop="10dp"
        android:id="@+id/GameStarterLinearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ResultGameTextView3"
            android:text="@string/Data"
            style="@style/Text"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/GameResult"
            android:layout_below="@+id/ResultGameTextView3"
            android:layout_marginTop="10dp"
            style="@style/Text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameStarterLinearLayout2"
        android:layout_marginTop="10dp"
        android:id="@+id/GameStarterLinearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ResultGameTextView4"
            android:text="@string/Email"
            style="@style/Text"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/ResultGameTextView4"
            style="@style/Text"
            android:layout_marginTop="10dp"
            android:id="@+id/ResultGameEditText3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameStarterLinearLayout3"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendEmail"
            style="@style/Button"
            android:layout_gravity="center"
            android:onClick="showMail" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReturnGameStarter"
            style="@style/Button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="showGameStarter" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuitButton"
            style="@style/Button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="quitApp" />

    </LinearLayout>

</RelativeLayout>
